css/style.css
/*
Theme Name: Twenty Fourteen
Theme URI: https://wordpress.org/themes/twentyfourteen/
Author: the WordPress team
Author URI: https://wordpress.org/
Description: In 2014, our default theme lets you create a responsive magazine website with a sleek, modern design. Feature your favorite homepage content in either a grid or a slider. Use the three widget areas to customize your website, and change your content's layout with a full-width page template and a contributor page to show off your authors. Creating a magazine website with WordPress has never been easier.
Version: 1.4
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Tags: black, green, white, light, dark, two-columns, three-columns, left-sidebar, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, accessibility-ready
Text Domain: twentyfourteen

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/

/**
 * Table of Contents:
 *
 * 1.0 - Reset
 * 2.0 - Repeatable Patterns
 * 3.0 - Basic Structure
 * 4.0 - Header
 * 5.0 - Navigation
 * 6.0 - Content
 *   6.1 - Post Thumbnail
 *   6.2 - Entry Header
 *   6.3 - Entry Meta
 *   6.4 - Entry Content
 *   6.5 - Galleries
 *   6.6 - Post Formats
 *   6.7 - Post/Image/Paging Navigation
 *   6.8 - Attachments
 *   6.9 - Archives
 *   6.10 - Contributor Page
 *   6.11 - 404 Page
 *   6.12 - Full-width
 *   6.13 - Singular
 *   6.14 - Comments
 * 7.0 - Sidebar
 *   7.1 - Widgets
 *   7.2 - Content Sidebar Widgets
 * 8.0 - Footer
 * 9.0 - Featured Content
 * 10.0 - Multisite
 * 11.0 - Media Queries
 * 12.0 - Print
 * -----------------------------------------------------------------------------
 */
@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300');
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600&subset=latin,latin-ext);
@import url('font-awesome.min.css');
@import url('superslides.css');
@import url('icons.css');
@import url('blue.css');
@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css');

/**
 * 1.0 Reset
 *
 * Resetting and rebuilding styles have been helped along thanks to the fine
 * work of Eric Meyer, Nicolas Gallagher, Jonathan Neal, and Blueprint.
 *
 * -----------------------------------------------------------------------------
 */

/* ------------------------------ social links -------------------------- */

h1,h2,h3,h4,h5,h6, body {
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 300; 
}
p{
	font-family: 'Source Sans Pro', sans-serif;
	font-weight: 300; 
	font-size: 18px;
	line-height: 24px;
	margin-bottom: 20px;
}
.social-links,
.social-profiles {
	list-style:none;
	margin:0;
	padding:0;
	margin-bottom: 30px;
}
.social-links li,
.social-profiles li{
	display:inline-block;
	margin: 0px 5px 0px;
	border-radius:3px;
	box-shadow:0 4px 0 transparent;
	-webkit-transition:all .3s ease-out;
	transition:all .3s ease-out;
}
.social-links li a {
	background: transparent;
	border: 2px solid #000;
display: block;
color: #171212;
	font-size: 18px;
	width: 48px;
	height: 48px;
	line-height: 48px;
	text-align:center;
	border-radius:50%;
	-webkit-transition:all .3s ease-out;
	transition:all .3s ease-out;
}
.paddingTop {
	padding-top: 50px;
	}
.social-links li a:hover {
	color:#FFF;
	background:#23A657;
	text-decoration: none;
	border-color: #23A657;
}
.input-group {
    position: relative;
    display: table;
    border-collapse: separate;
}
 .input-group .form-control {
    display: inline;
    background: #FFF none repeat scroll 0% 0%;
    outline: medium none;
    height: 44px;
    font-size: 18px;
    line-height: 32px;
    color: #AAA;
    font-weight: 400;
    vertical-align: top;
    border: 2px solid #ccc;
    box-shadow: none;
}
.btn-store {
    margin: 0px;
}
.widget-title {
	font-family: "Source Sans Pro",sans-serif;
text-transform: none;
font-weight: bold;
font-size: 26px;
line-height: 1.38462;
	}
#search {
	background: #FFF url("images/noise.png") repeat scroll 0px 0px;
color: #394755;
padding: 30px 0px;
/* border-top: 12px solid #5871DA; */
	}
.input-group-btn {
    position: relative;
    font-size: 0px;
    white-space: nowrap;
    border: 1px solid rgb(88, 113, 218);
    border-radius: 0px 5px 5px 0px;
}	
.site-info { text-align: center;}	
#menu-footer  li {
display: inline-block;
padding: 5px;
font-size: 16px;
	
	}
#menu-footer  li a{ color: #fff;}	
.fluid-width-video-wrapper video {
	    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
	}
	
#searchform{padding-top: 10px; margin-bottom: 30px;}	
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
	border: 0;
	font-family: inherit;
	font-size: 100%;
	font-style: inherit;
	font-weight: inherit;
	margin: 0;
	outline: 0;
	padding: 0;
	vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section {
	display: block;
}

audio,
canvas,
video {
	display: inline-block;
	max-width: 100%;
}

html {
	overflow-y: scroll;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust:     100%;
}

body,
button,
input,
select,
textarea {
	color: #2b2b2b;
	font-family: Lato, sans-serif;
	font-size: 16px;
	font-weight: 400;
	line-height: 1.5;
}

body {
	background: #f5f5f5;
	font-family: "Helvetica Neue","Helvetica",Arial,Verdana,sans-serif;
}

a {
	color: #2DAFF0;
	text-decoration: none;
}

a:focus {
	outline: thin dotted;
}

a:hover,
a:active {
	outline: 0;
}
/* ... */

